--- a/templates/index.html
+++ b/templates/index.html
@@ -3,23 +3,39 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/style.css">
 
     <title>VideoShazam</title>
 </head>
 <body class="text-center">
-<form class="form-signin" method=post enctype=multipart/form-data>
-    <h1 class="h3 mb-3 font-weight-normal">Upload video fragment to search</h1>
-    <input type="file" name="file" class="form-control-file" id="inputfile">
-    <br/>
-    <button class="btn btn-lg btn-primary btn-block">Submit</button>
-</form>
-<script src="https://unpkg.com/@popperjs/core@2"></script>
+<div style="display: flex; flex-direction: column; margin: 0 auto">
+    <div>
+        <img width="400" src="/static/logo_transparent.png" alt="Logo">
+    </div>
+    <div>
+        <div class="form-signin d-grid gap-2 col-6 mx-auto">
+            <input class="form-control" type="file" id="video-file" accept=".mp4,.mov">
+            <button class="btn btn-lg btn-primary">Search</button>
+        </div>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf-8">
+    const socket = io();
+    socket.on('connect', () => {
+        socket.emit('events', {data: 'Connected to the SocketServer...'});
+    });
+
+    socket.on('my_response', function (msg, cb) {
+       console.log(msg)
+    });
+</script>
 </body>
 </html>
