--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,52 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="icon" href="/static/logo_transparent.png" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/style.css">
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/static/script.js" charset="utf-8"></script>
+
     <title>VideoShazam</title>
 </head>
 <body class="text-center">
+<div aria-live="polite" aria-atomic="true">
+    <!-- Position it: -->
+    <!-- - `.toast-container` for spacing between toasts -->
+    <!-- - `.position-absolute`, `top-0` & `end-0` to position the toasts in the upper right corner -->
+    <!-- - `.p-3` to prevent the toasts from sticking to the edge of the container  -->
+    <div class="toast-container position-absolute top-0 end-0 p-3">
+    </div>
+</div>
 <div style="display: flex; flex-direction: column; margin: 0 auto">
     <div>
         <img width="400" src="/static/logo_transparent.png" alt="Logo">
     </div>
     <div>
         <div class="form-signin d-grid gap-2 col-6 mx-auto">
-            <input class="form-control" type="file" id="video-file" accept=".mp4,.mov">
-            <button class="btn btn-lg btn-primary">Search</button>
+            <input class="form-control form-control-sm" type="file" id="video-file" onchange="fileSelected(this)" accept=".mp4,.mov">
+            <button class="btn btn-md btn-primary" id="search-btn" onclick="searchVideo()" disabled>Search</button>
+            <button class="btn btn-md btn-primary" type="button" id="search-btn-loading" disabled style="display: none">
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Processing...
+            </button>
+        </div>
+    </div>
+    <div>
+        <div class="alert alert-success" role="alert" hidden>
+            <h4 class="alert-heading">We found it!</h4>
+            <p></p>
         </div>
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" crossorigin="anonymous"></script>
-<script type="text/javascript" charset="utf-8">
-    const socket = io();
-    socket.on('connect', () => {
-        socket.emit('events', {data: 'Connected to the SocketServer...'});
-    });
-
-    socket.on('my_response', function (msg, cb) {
-       console.log(msg)
-    });
-</script>
 </body>
 </html>
