--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="icon" href="/static/logo_transparent.png" type="image/x-icon">
+    <link rel="icon" href="/static/favicon.png" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,14 +15,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/script.js" charset="utf-8"></script>
 
-    <title>VideoShazam</title>
+    <title>ViDiscovery</title>
 </head>
 <body class="text-center">
 <div aria-live="polite" aria-atomic="true">
-    <!-- Position it: -->
-    <!-- - `.toast-container` for spacing between toasts -->
-    <!-- - `.position-absolute`, `top-0` & `end-0` to position the toasts in the upper right corner -->
-    <!-- - `.p-3` to prevent the toasts from sticking to the edge of the container  -->
     <div class="toast-container position-absolute top-0 end-0 p-3">
     </div>
 </div>
