Updated straight-forward way to find original video

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     </div>
     <div>
         <div class="alert alert-success" role="alert" hidden>
-            <h4 class="alert-heading">We found it!</h4>
+            <h4 class="alert-heading"></h4>
             <p></p>
         </div>
     </div>
