Optimized first version of search algorithm. Added fullscreen loader

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,5 +44,13 @@
     </div>
 </div>
 
+<div class="container full-loader-container">
+        <div class="row">
+            <div class="col-md-12" style="margin-top: 300px">
+                <div class="loader16"></div>
+            </div>
+            <span class="loader-label">Identifying given fragment...</span>
+        </div>
+    </div>
 </body>
 </html>
