--- a/static/style.css
+++ b/static/style.css
@@ -25,44 +25,150 @@ body {
     border-color: #191ba9;
 }
 
-.loader16{width:50px;height:50px;margin:30px auto 40px;position:relative}
-.loader16:after,.loader16:before{content:"";width:50px;position:absolute;left:0}
-.loader16:before{height:5px;border-radius:50%;background:#000;opacity:.1;top:59px;animation:shadow .5s linear infinite}
-.loader16:after{height:50px;border-radius:3px;background:#527ffb;top:0;animation:loading .5s linear infinite}
-@-webkit-keyframes loading{
-	17%{border-bottom-right-radius:3px}
-	25%{transform:translateY(9px) rotate(22.5deg)}
-	50%{transform:translateY(18px) scale(1,.9) rotate(45deg);border-bottom-right-radius:40px}
-	75%{transform:translateY(9px) rotate(67.5deg)}
-	100%{transform:translateY(0) rotate(90deg)}
-}
-@keyframes loading{
-	17%{border-bottom-right-radius:3px}
-	25%{transform:translateY(9px) rotate(22.5deg)}
-	50%{transform:translateY(18px) scale(1,.9) rotate(45deg);border-bottom-right-radius:40px}
-	75%{transform:translateY(9px) rotate(67.5deg)}
-	100%{transform:translateY(0) rotate(90deg)}
-}
-@-webkit-keyframes shadow{
-	0%,100%{transform:scale(1,1)}
-	50%{transform:scale(1.2,1)}
-}
-@keyframes shadow{
-	0%,100%{transform:scale(1,1)}
-	50%{transform:scale(1.2,1)}
+.loader16 {
+    width: 50px;
+    height: 50px;
+    margin: 30px auto 40px;
+    position: relative
 }
 
-.loader-label{
+.loader16:after, .loader16:before {
+    content: "";
+    width: 50px;
+    position: absolute;
+    left: 0
+}
+
+.loader16:before {
+    height: 5px;
+    border-radius: 50%;
+    background: #000;
+    opacity: .1;
+    top: 59px;
+    animation: shadow .5s linear infinite
+}
+
+.loader16:after {
+    height: 50px;
+    border-radius: 3px;
+    background: #527ffb;
+    top: 0;
+    animation: loading .5s linear infinite
+}
+
+@-webkit-keyframes loading {
+    17% {
+        border-bottom-right-radius: 3px
+    }
+    25% {
+        transform: translateY(9px) rotate(22.5deg)
+    }
+    50% {
+        transform: translateY(18px) scale(1, .9) rotate(45deg);
+        border-bottom-right-radius: 40px
+    }
+    75% {
+        transform: translateY(9px) rotate(67.5deg)
+    }
+    100% {
+        transform: translateY(0) rotate(90deg)
+    }
+}
+
+@keyframes loading {
+    17% {
+        border-bottom-right-radius: 3px
+    }
+    25% {
+        transform: translateY(9px) rotate(22.5deg)
+    }
+    50% {
+        transform: translateY(18px) scale(1, .9) rotate(45deg);
+        border-bottom-right-radius: 40px
+    }
+    75% {
+        transform: translateY(9px) rotate(67.5deg)
+    }
+    100% {
+        transform: translateY(0) rotate(90deg)
+    }
+}
+
+@-webkit-keyframes shadow {
+    0%, 100% {
+        transform: scale(1, 1)
+    }
+    50% {
+        transform: scale(1.2, 1)
+    }
+}
+
+@keyframes shadow {
+    0%, 100% {
+        transform: scale(1, 1)
+    }
+    50% {
+        transform: scale(1.2, 1)
+    }
+}
+
+.loader-label {
     color: #ffffff;
     font-weight: 400;
     font-size: 16px;
 }
 
-.full-loader-container{
+.full-loader-container {
     margin: 0 auto;
     position: absolute;
     height: 100%;
     background: #000000e3;
     max-width: 100%;
     display: none;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px 20px 5px;
+    border: 1px solid #888;
+    width: 700px;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: left;
+    right: 20px;
+    position: absolute;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#result-container{
+    border-bottom: 1px dashed #c5c5c5;
+    padding-bottom: 10px;
 }
