--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,6 @@ body {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
 }
 
 .form-signin {
@@ -168,7 +167,71 @@ body {
     cursor: pointer;
 }
 
-#result-container{
+#result-container {
     border-bottom: 1px dashed #c5c5c5;
     padding-bottom: 10px;
+}
+
+#main-container {
+    box-shadow: 6px 6px 17px 1px rgba(0, 0, 0, 0.06), -5px -5px 10px #f7f7f7;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto
+}
+
+.table-wrapper {
+    padding: 20px;
+    height: 800px;
+    overflow-y: scroll;
+}
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    box-shadow: 6px 6px 17px 1px rgb(0 0 0 / 6%), -5px -5px 10px #bfbfbf26;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidebar a {
+    padding: 8px 8px 8px 10px;
+    text-decoration: none;
+    font-size: 13px;
+    color: #818181;
+    display: block;
+    transition: 0.2s;
+    text-align: left;
+    cursor: pointer;
+}
+
+.sidebar a:hover{
+    background: #f1f6f7;
+}
+
+.sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 26px;
+    margin-left: 50px;
+}
+
+.list-group-item > div {
+    flex-direction: row-reverse;
+    padding: 5px;
+}
+
+.list-group-item > p{
+    color: black;
+    font-size: 14px;
+}
+
+.text-muted{
+    font-size: 13px;
 }
